--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd autonomous-news-agent
-            ls
             git pull origin main
             source myenv/bin/activate
             pip3 install streamlit
-            nohup streamlit run frontend_real.py --server.port 8501 &
+            nohup streamlit run frontend_real.py runserver 0.0.0.0:8501 &
