--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
             git pull origin main
             source myenv/bin/activate
             pip3 install streamlit
-            nohup streamlit run frontend_real.py runserver 0.0.0.0:8501 &
+            nohup streamlit run frontend_real.py --server.port 8501 &
