--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd autonomous-news-agent
+            git config user.name "Sarvesh521"
+            git config user.email "SarveshKumar.A@iiitb.ac.in"
+            git config github.token ${{ secrets.ACCESS_TOKEN }}
             git pull origin main
             source myenv/bin/activate
             pip3 install streamlit
