--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,5 @@ jobs:
             git pull origin main
             source myenv/bin/activate
             pip3 install streamlit
-            nohup streamlit run frontend_real.py --server.port 8501 &
+            nohup streamlit run frontend_real.py --server.port 8501 > streamlit.log 2>&1 &
+            disown
