--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,6 @@ jobs:
             git config github.token ${{ secrets.ACCESS_TOKEN }}
             git pull origin main
             source myenv/bin/activate
-            pip3 install streamlit
-            pip install -r requirements.txt
+            pip3 install -r requirements.txt
             nohup streamlit run frontend_real.py --server.port 8501 > streamlit.log 2>&1 &
             disown
